<resources>
    <string name="app_name">My_News</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open drawer</string>
    <string name="closeDrawer">close drawer</string>

    //fragment labels
    <string name="nav_main">Home</string>
    <string name="nav_most_popular">Most Popular</string>
    <string name="nav_top_stories">Top Stories</string>

    //dropdown menu item labels
    <string name="books_articles">Books</string>
    <string name="health_articles">Health</string>
    <string name="movie_articles">Movies</string>
    <string name="science_articles">Science</string>
    <string name="tech_articles">Technology</string>
    <string name="travel_articles">Travel</string>
    <string name="dropdown_help">Help</string>
    <string name="dropdown_about">About</string>

    <string name="action_mark_all_read">Mark as Read</string>
    <string name="action_clear_all">Clear All</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>

    //Notification strings
    <string name="switch_notification">Enable notifications</string>
    <string name="text_notification">A new article is available!</string>
    <string name="test_notification">Test notification!</string>
    <string name="default_notification_channel_id">Default channel</string>

    //Checkbox string values
    <string name="box_unchecked">You must select at least one box!</string>
    <string name="search_hint">Search query term</string>
    <string name="checkbox6">Travel</string>
    <string name="checkbox5">Technology</string>
    <string name="checkbox4">Science</string>
    <string name="checkbox3">Movies</string>
    <string name="checkbox2">Health</string>
    <string name="checkbox1">Books</string>

    <string name="query_error">You have to edit a query term search!!</string>
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
    <string name="search_button_text">Search</string>

    <string name="search">Search</string>
</resources>
