<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox_1"
            style="@style/checkBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@drawable/customcheckbox"
            android:checked="true"
            android:onClick="onCheckboxClicked"
            android:text="@string/checkbox1" />

        <CheckBox
            android:id="@+id/checkbox_2"
            style="@style/checkBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@drawable/customcheckbox"
            android:onClick="onCheckboxClicked"
            android:text="@string/checkbox2" />

        <CheckBox
            android:id="@+id/checkbox_3"
            style="@style/checkBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@drawable/customcheckbox"
            android:onClick="onCheckboxClicked"
            android:text="@string/checkbox3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox_4"
            style="@style/checkBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@drawable/customcheckbox"
            android:onClick="onCheckboxClicked"
            android:text="@string/checkbox4" />

        <CheckBox
            android:id="@+id/checkbox_5"
            style="@style/checkBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@drawable/customcheckbox"
            android:onClick="onCheckboxClicked"
            android:text="@string/checkbox5" />

        <CheckBox
            android:id="@+id/checkbox_6"
            style="@style/checkBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@drawable/customcheckbox"
            android:onClick="onCheckboxClicked"
            android:text="@string/checkbox6" />

    </LinearLayout>

</LinearLayout>