<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout_search_article_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_search_article"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <include layout="@layout/search_query_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight=".5"
                android:text="@string/begin_date"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight=".5"
                android:text="@string/end_date"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/begin_date"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight=".5"
                android:drawableEnd="@drawable/ic_select"
                android:drawableRight="@drawable/ic_select"
                android:focusable="true"
                android:inputType="date"
                android:textColorHint="@color/cardview_shadow_start_color" />

            <EditText
                android:id="@+id/end_date"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight=".5"
                android:drawableEnd="@drawable/ic_select"
                android:drawableRight="@drawable/ic_select"
                android:focusable="true"
                android:inputType="date"
                android:textColorHint="@color/cardview_shadow_start_color" />
        </LinearLayout>

        <include
            layout="@layout/checkbox_layout"
            android:layout_height="190dp" />

        <Button
            android:id="@+id/search_activity_search_button"
            style="@style/MainStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick"
            android:text="@string/search_button_text"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>

</FrameLayout>